# forge-lsp

./: .gitignore  AGENTS.md  Cargo.toml  LSP_CLIENT_SERVER_DEBUGGING.md  LSP_USAGE.md  README.md  REMAPPING_SYSTEM.md  TESTING_AND_DEBUGGING.md  USAGE.md  debug_lint_parsing.py  pyproject.toml  run_tests.sh  test_antlr_parser.py  test_cache_functionality.py  test_error_diagnostics.py  test_final_demo.py  test_forge_diagnostics.py  test_library_resolution.py  test_lint_message_analysis.py  test_lsp_server.py  test_message_cleanup.py  test_parser.py  test_remapping.py
.github/workflows/: rust.yml
docs/: LSP_CLIENT_SERVER_DEBUGGING.md  LSP_USAGE.md  REMAPPING_SYSTEM.md  TESTING_AND_DEBUGGING.md
examples/src/: A.sol  B.sol  C.sol  EmptyFile.sol  ExampleContract.sol  TestErrors.sol  TestLint.sol  TestMonitoring.sol  TestWarnings.sol
examples/test/: A.t.sol  B.t.sol  C.t.sol
grammar/: SolidityLexer.g4  SolidityParser.g4
nvim/: forge-lsp.lua
src/: build.rs  cli.rs  goto.rs  lib.rs  lint.rs  lsp.rs  main.rs  references.rs  rename.rs  symbols.rs
src/forge_lsp/: __init__.py  antlr_solidity_parser.py  ast_builder.py  ast_nodes.py  forge_diagnostics.py  library_resolver.py  navigation_provider.py  (+2 more)
testdata/: A.sol  B.sol  C.sol  Reference.sol  Simple.sol  rename.sol
tests/: debug_lint_parsing.py  test_antlr_parser.py  test_cache_functionality.py  test_error_diagnostics.py  test_final_demo.py  test_forge_diagnostics.py  test_library_resolution.py  test_lint_message_analysis.py  test_lsp_server.py  test_message_cleanup.py  test_parser.py  test_remapping.py
(+6 files in other folders)
