[project]
name = "forge-lsp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Meek Msaki", email = "meek10x@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pygls>=1.3.1",
    "toml>=0.10.2",
    "antlr4-python3-runtime>=4.13.1",
]

[project.scripts]
forge-lsp = "forge_lsp:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
